fix: overflow styles

--- a/client/src/pages/ArticlePage/MobileModal/MobileModal.module.scss
+++ b/client/src/pages/ArticlePage/MobileModal/MobileModal.module.scss
@@ -11,7 +11,7 @@
   position: absolute;
   width: 100%;
   bottom: 48px;
-  padding: 16px 20px;
+  padding: 16px 20px 68px 20px;
   background-color: var(--color-white);
 
   & .closeModalIcon {
